<?xml version="1.0" encoding="utf-8"?>					<!-- 版本号及编码方式 -->
<resources>
    <string name="app_name">美食天下</string>				<!-- 软件标题 -->
    <string name="menu_settings">Settings</string>
    <string name="mstx">美食天下</string>
    <string name="load_now">正在加载</string>   
    <string name="pai_new">最新</string> 					<!-- 随拍筛界面 -->
    <string name="remen">热门</string>
    <string name="renao">热闹</string>
    <string name="hongbei">烘焙</string>
    <string name="xiaochi">小吃</string>
    <string name="ertongcan">儿童餐</string>
    <string name="yirenshi">一人食</string>
    <string name="errenshijie">二人世界</string>
    <string name="jiatingjvhui">家庭聚餐</string>
    <string name="pengyoujvhui">朋友聚餐</string>
    <string name="xican">西餐</string>
    <string name="chuangyicai">创意菜</string>
    <string name="chuancai">川菜</string>
    <string name="yuecai">粤菜</string>
    <string name="riliao">日料</string>
    <string name="qiaokeli">巧克力</string>
    <string name="bingjiling">冰激凌</string>
    <string name="hongkao">烘烤</string>
    <string name="zuixintuijian">最新</string>			<!-- 菜品界面 -->
    <string name="remenpaihang">最热</string>
    <string name="quanbucaipu">菜系</string>
    <string name="changjiancaishi">口味</string>
    <string name="changjianzhushi">时间</string>
    <string name="shicai">烹饪方式</string>
    <string name="jiankangshipu">难度</string>
    <string name="zhongshicaixi">工具</string>  
    <string name="only_choose_num">超出可选图片张数</string> <!-- 图片浏览 -->
    <string name="finish">完成</string>
    <string name="back">返回</string>
    <string name="preview">预览</string>
    <string name="all_pic">全部图片</string>
    <string name="no_photo">相册没有图片</string>
    <string name="select">选择</string>    
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开后刷新</string>
    <string name="pull_to_refresh_refreshing_label">刷新\u2026</string>
    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">加载中\u2026</string>
	<string name="the_end">到底啦</string> 	
	<string name="menu">菜品</string>						<!-- 主界面 -->
	<string name="random">随拍</string>
	<string name="home">首页</string>
	<string name="me">我的</string>
	<string name="exit_again">再按一次退出程序</string>	
	<string name="select_label">请选择标签</string>
	<string name="ok">确定</string>		
	<string name="attention">关注</string>				<!-- show -->
	<string name="label_more">更多</string>
    <string name="label_less">收起</string>		
	<string name="cancel_attention">取消关注</string>
	<string name="loaded">已下载</string>
	<string name="loaded_menu_sucess">菜谱下载成功</string>	<!-- 提示信息 -->
	<string name="loaded_menu_fail">菜谱下载失败</string>
	<string name="net_fail">网络已中断，请设置网络</string>		
	<string name="no_set">没有要搜索的内容</string>			
	<string name="collection">收藏</string>				<!-- 收藏界面 -->
	<string name="noRandomC">没有随拍收藏，快去收藏吧</string>
    <string name="noMenuC">没有菜谱收藏，快去收藏吧</string>
	<string name="collection_menu">收藏菜谱</string>
	<string name="collection_random">收藏随拍</string>	
	<string name="please_select_label">请选择标签</string><!-- 上传随拍界面 -->
	<string name="user_defined_label">自定义标签</string>	
	<string name="land">登陆</string>						<!-- 登陆界面 -->
	<string name="input_name">请输入用户名</string>
	<string name="input_pwd">请输入密码</string>
	<string name="land_fail">登陆失败</string>
	<string name="land_success">登陆成功</string>	
	<string name="delete">删除</string>													<!-- 离线界面 -->
	<string name="noRanLoaded">离线随还是空的哦~\n加入清单可以离线查看随拍哦</string>
    <string name="noMenuLoaded">离菜谱还是空的哦~\n加入清单可以离线查看菜谱哦</string>
	<string name="loaded_text">离线菜品&amp;随拍</string>
</resources>