<?xml version="1.0" encoding="utf-8"?>
<!-- 登陆界面 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/land" 
    >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="100px"
        android:src="@drawable/avatar" 
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20px"
        android:layout_marginRight="20px"
        android:orientation="vertical" 
        >

        <EditText
            android:id="@+id/accounts"
            android:layout_width="fill_parent"
            android:layout_height="44.0dip"
            android:background="#00ffffff"
            android:hint="@string/input_name"
            android:maxLength="16"
            android:maxLines="1"
            android:paddingLeft="12.0dip"
            android:textColor="#ff1d1d1d"
            android:textColorHint="#ff666666"
            android:textSize="16.0sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0px"
            android:layout_marginLeft="1.0px"
            android:layout_marginRight="1.0px"
            android:background="#ffc0c3c4" />

        <EditText
            android:id="@+id/pwd"
            android:layout_width="fill_parent"
            android:layout_height="44.0dip"
            android:background="#00ffffff"
            android:hint="@string/input_pwd"
            android:maxLength="16"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingLeft="12.0dip"
            android:textColor="#ff1d1d1d"
            android:textColorHint="#ff666666"
            android:textSize="16.0sp" />
    </LinearLayout>

    <Button
        android:id="@+id/land_bt"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_marginLeft="20px"
        android:layout_marginRight="20px"
        android:background="@drawable/corner_red_shape"
        android:gravity="center"
        android:text="@string/land" 
        android:textColor="@color/white"
        />

</LinearLayout>