<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/albumback" >

    <RelativeLayout
        android:id="@+id/headview"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="@drawable/plugin_camera_title_bar9"
        android:gravity="center_vertical" >

        <Button
            android:id="@+id/gallery_back"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/plugin_camera_title_btn_back"
            android:text="@string/back"
            android:textColor="#fff"
            android:textSize="14sp" />

        <Button
            android:id="@+id/send_button"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:singleLine="true"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/gallery_back"
            android:background="@drawable/plugin_camera_ok_btn_state"
            android:text="@string/finish"
            android:textColor="#fff"
            android:textSize="14sp" />
    </RelativeLayout>

    <com.king.photo.zoom.ViewPagerFixed
        android:id="@+id/gallery01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/bottom_layout"
        android:layout_below="@id/headview"
        android:layout_centerHorizontal="true"
        android:background="@color/plugin_camera_black"
        android:unselectedAlpha="1" >
    </com.king.photo.zoom.ViewPagerFixed>

    <RelativeLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@drawable/plugin_camera_bottom_bar" >

        <Button
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_margin="5dip"
            android:background="@null"
            android:text="@string/select"
            android:textColor="@color/white" />

        <ToggleButton
            android:id="@+id/toggle_select"
            android:layout_width="25dip"
            android:layout_height="25dip"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/text"
            android:background="@drawable/plugin_camera_pic_choose_selector"
            android:textOff="@null"
            android:textOn="@null" />
    </RelativeLayout>

</RelativeLayout>