<?xml version="1.0" encoding="utf-8"?>
<!-- 收藏界面 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <!-- 头部信息 -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="10dip" >

        <ImageView
            android:id="@+id/loaded_last"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_margin="5dip"
            android:src="@drawable/btnback" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/collection"
            android:textColor="@color/red"
            android:textSize="25sp" />
    </RelativeLayout>

    <!-- 菜谱 、随拍按钮 -->

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5px"
        android:layout_marginTop="20px"
        android:background="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15px"
        android:layout_marginTop="15px" >

        <Button
            android:id="@+id/loaded_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00000000"
            android:gravity="center"
            android:text="@string/collection_menu"
            android:textSize="20sp" />

        <View
            android:layout_width="0.5px"
            android:layout_height="match_parent"
            android:background="@color/gray" />

        <Button
            android:id="@+id/loaded_random"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00000000"
            android:gravity="center"
            android:text="@string/collection_random"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <View
            android:id="@+id/left"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_weight="1"
            android:background="@color/red" />

        <View
            android:id="@+id/right"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_weight="1"
            android:background="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20px"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TabHost
            android:id="@+id/loaded_tabhost"
            android:layout_width="fill_parent"
            android:layout_height="match_parent" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical" >

                <TabWidget
                    android:id="@android:id/tabs"
                    android:layout_width="fill_parent"
                    android:layout_height="60dip"
                    android:background="@color/white"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingTop="3dip"
                    android:visibility="gone" />

                <FrameLayout
                    android:id="@android:id/tabcontent"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1" >

                    <fragment
                        android:id="@+id/loaded_tab01"
                        android:name="com.example.fragment.CollectionMenu"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent" />

                    <fragment
                        android:id="@+id/Loaded_tab02"
                        android:name="com.example.fragment.CollectionRandom"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent" />
                </FrameLayout>
            </LinearLayout>
        </TabHost>
    </LinearLayout>

</LinearLayout>